# TraStrainer

./: .gitignore  COMPLETE_USAGE_GUIDE.md  POLARS_INTEGRATION_COMPLETE.md  README.md  README_POLARS.md  RESTRUCTURED_README.md  RESTRUCTURING_COMPLETE.md  TraStrainer.py  USAGE_UV.md  UV_INTEGRATION_COMPLETE.md  analyze_sampling.py  baseline.py  evaluate_efficiency.py  main.py  pyproject.toml  requirements_new.txt  run_complete_test.py  sampler_new.py  setup.py  tasks.py  test_baselines.py  test_fixed_sampling.py  test_paper_algorithm.py  test_windowed_sampling.py
Sieve/: data_process.py  myrrcf.py  sieve.py  wtSampling.py
Sieve/xcluster/models/: PNode.py  pruning_heuristics.py
Sieve/xcluster/utils/: deltasep_utils.py
examples/: basic_usage.py  polars_usage.py  uv_examples.py
src/trastrainer/: __init__.py  algorithm.py  baseline_adapter.py  baseline_samplers.py  cli.py  data_structures.py  legacy.py  main.py  main_typer.py  platform_adapter.py  polar_loader.py  predictors.py  preprocessor.py  register_samplers.py  trastrainer_diversity_sampler.py  trastrainer_sampler.py  utils.py
src/trastrainer/models/: __init__.py  linear_predictor.py
tests/: test_basic.py
