[project]
name = "TraStrainer"
version = "0.1.0"
description = "An adaptive sampler for distributed traces with system runtime state"
readme = "README.md"

requires-python = ">=3.13"
dependencies = [
    "polars>=1.31.0",
    "rcabench-platform==0.3.31a1",
    "numpy",
    "matplotlib",
    "pandas",
    "scikit-learn",
    "torch",
    "treelib",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
trastrainer = "trastrainer.cli:app"

[build-system]
requires = ["uv_build>=0.7.12,<0.8.0"]
build-backend = "uv_build"

[tool.pyright]
exclude = [ #
    ".git",
    "**/__pycache__",
    ".venv",
    ".vscode",
    ".idea",
    "data/",
    "output/",
    "temp/",
]

[dependency-groups]
dev = [ #
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "marimo[recommended]>=0.14.10",
    "kubernetes-stubs-elephant-fork>=33.1.0",
    "plotly>=6.2.0",
    "pyqt6>=6.9.1",
    "pyright>=1.1.403",
    "ruff>=0.12.2",
    "vegafusion>=2.0.2",
    "vl-convert-python>=1.8.0",
    "pandas-stubs>=2.3.0.250703",
    "uv-bump>=0.1.2",
]
